# vonuvoli-scheme

./: .gitignore  .rustfmt.toml  .travis.yml  .x-run  .x-run.execute  .x-run.options  Cargo.toml
documentation/: bom.json  bom.md  crate.md  libraries-index.md  libraries-r7rs.ss  libraries-vs.ss  libraries.css  libraries.md  libraries.ss  r7rs-support.md  readme.rst  todo.txt
documentation/assets/: libraries.css  libraries.js
documentation/libraries/: _libraries.md
documentation/libraries-ss/: empty.ss  libraries-vs.ss  r7rs.ss
documentation/licensing/: notice.txt
documentation/reports/: libraries--definitions.md  libraries--symbols.md  primitives--variants.md  r7rs--coverage.md
documentation/sbom/: cyclonedx.json  sbom.html  sbom.json  sbom.txt
documentation/tools/: common--help.txt  interpreter--help.txt
examples/: benchmark--controls.py  benchmark--controls.ss  benchmark--make-cons.py  examples--backtrace.ss  examples--disk-usage--chibi.ss  examples--disk-usage.ss  examples--display-1.ss  examples--process-1.ss  examples--process-2.ss  examples--random-1.ss  examples--stdio--r7rs.ss  examples--stdio-1.ss  examples--stdio-2.ss  examples--stdio.ss  examples--transcript.ss  optimizer--conditionals.ss  optimizer--loops.ss
examples/_outputs/: benchmark--controls--vonuvoli-compile.out  benchmark--loop--python.out  benchmark--loop--vonuvoli-compile.out  benchmark--make-cons--vonuvoli-compile.out  benchmark--make-vector--vonuvoli-compile.out  benchmark--make-vector--vonuvoli-release.out  benchmark--r7rs-ack--vonuvoli-compile.out  benchmark--r7rs-array1--vonuvoli-compile.out  benchmark--r7rs-browse--vonuvoli-compile.out  examples--backtrace--vonuvoli-compile.out  examples--disk-usage--vonuvoli-compile.out  examples--display-1--vonuvoli-compile.out  examples--process-1--vonuvoli-compile.out  examples--process-2--vonuvoli-compile.out  examples--random-1--vonuvoli-compile.out  examples--stdio--r7rs--vonuvoli-compile.out  examples--stdio--vonuvoli-compile.out  examples--stdio-1--vonuvoli-compile.out  examples--stdio-2--vonuvoli-compile.out  examples--transcript--vonuvoli-compile.out  optimizer--conditionals--vonuvoli-compile.out  optimizer--controls--vonuvoli-compile.out  optimizer--loops--vonuvoli-compile.out
scripts/: _z-run  build.z-run  cargo-build.z-run  cargo-checks.z-run  cargo-run.z-run  cargo-test.z-run  cargo.z-run  documentation.z-run  environment.z-run  reports.z-run  run.z-run  sources.z-run  tests.z-run  workbench.z-run  z-run  z-run.old
sources/: bin.rs  bin_bencher.rs  bin_common.rs  bin_compiler.rs  bin_interpreter.rs  bin_reports.rs  bin_tester.rs  builtins.rs  builtins_arrays.rs  builtins_bytes.rs  builtins_cache.rs  builtins_comparisons.rs  builtins_crypto.rs  builtins_encoding.rs  builtins_filesystem.rs  builtins_functions.rs  builtins_hashes.rs  builtins_lists.rs  builtins_ports.rs  builtins_processes.rs  builtins_random.rs  builtins_records.rs  builtins_regularex.rs  builtins_runtime.rs  builtins_serde.rs  builtins_strings.rs  builtins_types.rs  compiler.rs  compiler_optimizer.rs  constants.rs  contexts.rs  conversions.rs  counters.rs  display.rs  documentation.rs  errors.rs  evaluator.rs  evaluator_trait.rs  expressions.rs  extended_procedures.rs  (+79 more)
tests/: builtins-lists.rs  compiler.rs  contexts.rs  counters.rs  evaluator.rs  expressions.rs  expressions.rs.disabled  low-level-assertions.rs  low-level-comparisons.rs  low-level-conversions.rs  low-level-parser.rs  low-level-r7rs.rs  low-level-rust.rs  low-level-sizes.rs  parser.rs  prelude.in  r7rs.rs  scheme.rs  sizes.rs  tests.rs  values.rs
tests/_outputs/: benchmark__arithmetic.out  benchmark__issues.out  benchmark__lists.out  benchmark__loops.out  benchmark__ports.out  benchmark__ports_native.out  benchmark__quotation.out  builtins-lists--benchmark__list_build_1__immutable.out  builtins-lists--benchmark__list_build_1__mutable.out  builtins-lists--benchmark__list_build_2__immutable.out  builtins-lists--benchmark__list_build_2__mutable.out  builtins-lists--benchmark__list_build_3__immutable.out  builtins-lists--benchmark__list_build_3__mutable.out  builtins-lists--benchmark__list_build_4__immutable.out  builtins-lists--benchmark__list_build_4__mutable.out  builtins-lists--benchmark__list_clone__0__immutable.out  builtins-lists--benchmark__list_clone__0__mutable.out  builtins-lists--benchmark__list_clone__10000__immutable.out  builtins-lists--benchmark__list_clone__10000__mutable.out  builtins-lists--benchmark__list_clone__1000__immutable.out  builtins-lists--benchmark__list_clone__1000__mutable.out  builtins-lists--benchmark__list_clone__100__immutable.out  builtins-lists--benchmark__list_clone__100__mutable.out  builtins-lists--benchmark__list_clone__10__immutable.out  builtins-lists--benchmark__list_clone__10__mutable.out  builtins-lists--benchmark__list_clone__1__immutable.out  builtins-lists--benchmark__list_clone__1__mutable.out  builtins-lists--benchmark__list_empty.out  builtins-lists--benchmark__list_length__0.out  builtins-lists--benchmark__list_length__10000__immutable.out  builtins-lists--benchmark__list_length__10000__mutable.out  builtins-lists--benchmark__list_length__1000__immutable.out  builtins-lists--benchmark__list_length__1000__mutable.out  builtins-lists--benchmark__list_length__100__immutable.out  builtins-lists--benchmark__list_length__100__mutable.out  builtins-lists--benchmark__list_length__10__immutable.out  builtins-lists--benchmark__list_length__10__mutable.out  builtins-lists--benchmark__list_length__1__immutable.out  builtins-lists--benchmark__list_length__1__mutable.out  builtins-lists--benchmark__list_make__0__immutable.out  (+101 more)
tests/low-level/: conversions.rs  parser.rs  r7rs.rs  sizes.rs
tests/scheme/: arithmetic.sst  arrays-conversions.sst  arrays-mutations-1.sst  arrays-mutations-2.sst  arrays-mutations-3.sst  arrays.sst  booleans.sst  bytes.sst  cache-bytes-default.sst  cache-bytes-namespace.sst  cache-objects-busting.sst  cache-objects-default.sst  cache-objects-namespace.sst  cache-objects-partitions.sst  comparisons-equivalent-by-identity-negated.sst  (+73 more)
(+2291 files in other folders)
