
[package]
name = "vonuvoli-scheme"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
publish = false


[[bin]]
name = "vonuvoli-scheme-interpreter"
path = "./sources/bin_interpreter.rs"
test = false
bench = false
doc = false
doctest = false

[[bin]]
name = "vonuvoli-scheme-compiler"
path = "./sources/bin_compiler.rs"
test = false
bench = false
doc = false
doctest = false

[[bin]]
name = "vonuvoli-scheme-tester"
path = "./sources/bin_tester.rs"
test = false
bench = false
doc = false
doctest = false

[[bin]]
name = "vonuvoli-scheme-bencher"
path = "./sources/bin_bencher.rs"
test = false
bench = false
doc = false
doctest = false

[lib]
name = "vonuvoli_scheme"
path = "./sources/lib.rs"
test = false
bench = false
doc = true
doctest = false




[features]

default = [
	"vonuvoli_defaults",
	"vonuvoli_builtins",
	"vonuvoli_inline",
]

vonuvoli_defaults = [
	"vonuvoli_new_immutable",
	"vonuvoli_port_output_display_flush",
	"vonuvoli_port_output_newline_flush",
	"vonuvoli_backtrace",
	"vonuvoli_terminal",
]


vonuvoli_debug = [
	"vonuvoli_debug_4",
]

vonuvoli_debug_0 = []

vonuvoli_debug_1 = [
	"vonuvoli_debug_0",
	"vonuvoli_defaults",
]

vonuvoli_debug_2 = [
	"vonuvoli_debug_1",
	"vonuvoli_compiler_trace_error",
	# "vonuvoli_optimizer_trace_error",
	"vonuvoli_evaluator_trace_error",
	# "vonuvoli_panic_on_failed",
]

vonuvoli_debug_3 = [
	"vonuvoli_debug_2",
	"vonuvoli_backtrace_sources",
	"vonuvoli_transcript_color_always",
]

vonuvoli_debug_4 = [
	"vonuvoli_debug_3",
	"vonuvoli_builtins",
]


vonuvoli_new_immutable = []

vonuvoli_port_output_write_flush = []
vonuvoli_port_output_display_flush = []
vonuvoli_port_output_newline_flush = []

vonuvoli_compiler_trace_error = []
vonuvoli_optimizer_trace_error = []
vonuvoli_evaluator_trace_error = []

vonuvoli_backtrace = ["backtrace", "rustc-demangle"]
vonuvoli_backtrace_sources = []
vonuvoli_terminal = ["ansi_term", "atty"]
vonuvoli_transcript_color_always = []

vonuvoli_panic_on_failed = []

vonuvoli_inline = []

vonuvoli_builtins = [
	"vonuvoli_builtins_crypto",
	"vonuvoli_builtins_random",
	"vonuvoli_builtins_encoding",
]

vonuvoli_builtins_crypto = ["ring"]
vonuvoli_builtins_random = ["rand"]
vonuvoli_builtins_encoding = ["data-encoding"]




[dependencies.backtrace]
version = "~0.3.5"
optional = true
features = ["cpp_demangle"]

[dependencies.rustc-demangle]
version = "~0.1.6"
optional = true

[dependencies.ansi_term]
version = "~0.10.2"
optional = true

[dependencies.atty]
version = "~0.2.6"
optional = true

[dependencies.data-encoding]
version = "~2.1.1"
optional = true

[dependencies.ring]
version = "~0.12.1"
optional = true

[dependencies.rand]
version = "~0.4.2"
optional = true




[profile.dev]
opt-level = 0
codegen-units = 32
lto = false
debug = true
incremental = true

[profile.test]
opt-level = 0
codegen-units = 32
lto = false
debug = true
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

[profile.bench]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

