
[package]
name = "vonuvoli-scheme"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
publish = false


[[bin]]
name = "vonuvoli-scheme-interpreter"
path = "./sources/bin_interpreter.rs"
test = false
bench = false
doc = false
doctest = false

[[bin]]
name = "vonuvoli-scheme-compiler"
path = "./sources/bin_compiler.rs"
test = false
bench = false
doc = false
doctest = false

[[bin]]
name = "vonuvoli-scheme-tester"
path = "./sources/bin_tester.rs"
test = false
bench = false
doc = false
doctest = false

[[bin]]
name = "vonuvoli-scheme-bencher"
path = "./sources/bin_bencher.rs"
test = false
bench = false
doc = false
doctest = false

[lib]
name = "vonuvoli_scheme"
path = "./sources/lib.rs"
test = false
bench = false
doc = true
doctest = false




[features]

default = [
	"vonuvoli_release",
]


vonuvoli_release = [
	"vonuvoli_defaults",
	"vonuvoli_values_all",
	"vonuvoli_builtins_all",
	"vonuvoli_inline",
	"vonuvoli_terminal",
	"vonuvoli_transcript_ansi_enabled",
	"vonuvoli_transcript_code_hashes",
	"vonuvoli_abort_on_panic",
]

vonuvoli_debug_for_binaries = [
	"vonuvoli_debug_level_4",
	"vonuvoli_abort_on_panic",
]

vonuvoli_debug_for_tests = [
	"vonuvoli_debug_level_4",
	"vonuvoli_compiler_trace_error",
	"vonuvoli_optimizer_trace_error",
	"vonuvoli_evaluator_trace_error",
	# "vonuvoli_panic_on_failed",
	"vonuvoli_transcript_compact",
	"vonuvoli_transcript_ansi_always",
]

vonuvoli_defaults = [
	"vonuvoli_new_immutable",
	"vonuvoli_port_output_display_flush",
	"vonuvoli_port_output_newline_flush",
	"vonuvoli_backtrace",
	"vonuvoli_transcript",
	"vonuvoli_parser",
	"vonuvoli_tests",
]


vonuvoli_debug_level_0 = []

vonuvoli_debug_level_1 = [
	"vonuvoli_debug_level_0",
	"vonuvoli_defaults",
]

vonuvoli_debug_level_2 = [
	"vonuvoli_debug_level_1",
	"vonuvoli_values_all",
]

vonuvoli_debug_level_3 = [
	"vonuvoli_debug_level_2",
	"vonuvoli_builtins_all",
]

vonuvoli_debug_level_4 = [
	"vonuvoli_debug_level_3",
	"vonuvoli_terminal",
	"vonuvoli_transcript_ansi_enabled",
	"vonuvoli_transcript_code_hashes",
	"vonuvoli_backtrace_sources",
]


vonuvoli_new_immutable = []

vonuvoli_port_output_write_flush = []
vonuvoli_port_output_display_flush = []
vonuvoli_port_output_newline_flush = []

vonuvoli_compiler_trace_error = []
vonuvoli_optimizer_trace_error = []
vonuvoli_evaluator_trace_error = []

vonuvoli_backtrace = [
	"backtrace",
	"rustc-demangle",
]
vonuvoli_backtrace_sources = []
vonuvoli_terminal = [
	"ansi_term",
	"atty",
]
vonuvoli_transcript_compact = []
vonuvoli_transcript_ansi_enabled = []
vonuvoli_transcript_ansi_always = []
vonuvoli_transcript_code_hashes = [
	"blake2-rfc",
]
vonuvoli_transcript = []
vonuvoli_parser = [
	"vonuvoli_tests",
]
vonuvoli_tests = [
	"vonuvoli_parser",
	"vonuvoli_transcript",
]

vonuvoli_panic_on_failed = []
vonuvoli_abort_on_panic = []

vonuvoli_inline = []

vonuvoli_values_all = [
	"vonuvoli_values_string",
	"vonuvoli_values_bytes",
	"vonuvoli_values_array",
	"vonuvoli_values_values",
	"vonuvoli_values_error",
	"vonuvoli_values_keyword",
	"vonuvoli_values_unique",
	"vonuvoli_values_contexts",
	"vonuvoli_values_opaque",
	"vonuvoli_values_lambda",
	"vonuvoli_values_extended",
	"vonuvoli_values_native",
	"vonuvoli_values_mutable",
]
vonuvoli_values_string = []
vonuvoli_values_bytes = []
vonuvoli_values_array = []
vonuvoli_values_values = []
vonuvoli_values_error = []
vonuvoli_values_keyword = []
vonuvoli_values_unique = []
vonuvoli_values_contexts = []
vonuvoli_values_opaque = []
vonuvoli_values_lambda = []
vonuvoli_values_extended = []
vonuvoli_values_native = []
vonuvoli_values_mutable = []

vonuvoli_builtins_all = [
	"vonuvoli_builtins_parameters",
	"vonuvoli_builtins_promises",
	"vonuvoli_builtins_records",
	"vonuvoli_builtins_regex",
	"vonuvoli_builtins_ports",
	"vonuvoli_builtins_filesystem",
	"vonuvoli_builtins_processes",
	"vonuvoli_builtins_transcript",
	"vonuvoli_builtins_crypto",
	"vonuvoli_builtins_random",
	"vonuvoli_builtins_encoding",
	"vonuvoli_builtins_cache",
	"vonuvoli_builtins_serde",
]

vonuvoli_builtins_parameters = []
vonuvoli_builtins_promises = []
vonuvoli_builtins_records = [
	"vonuvoli_values_extended",
	"vonuvoli_values_array", # FIXME: Remove this dependency!
]
vonuvoli_builtins_regex = [
	"regex",
]
vonuvoli_builtins_ports = []
vonuvoli_builtins_filesystem = [
	"vonuvoli_values_opaque",
]
vonuvoli_builtins_processes = [
	"vonuvoli_builtins_ports",
]
vonuvoli_builtins_transcript = [
	"vonuvoli_values_string",
	"vonuvoli_transcript",
]
vonuvoli_builtins_crypto = [
	"vonuvoli_values_native",
	"vonuvoli_values_bytes",
	"ring",
	"digest",
	"sha-1",
	"sha2",
	"sha3",
	"md-5",
	"blake2",
]
vonuvoli_builtins_random = [
	"vonuvoli_values_native",
	"rand",
]
vonuvoli_builtins_encoding = [
	"vonuvoli_values_native",
	"vonuvoli_values_string",
	"vonuvoli_values_bytes",
	"data-encoding",
]
vonuvoli_builtins_cache = [
	"vonuvoli_values_opaque",
	"lmdb-zero",
]
vonuvoli_builtins_serde = [
	"serde",
	"serde_derive",
	"serde_bytes",
	"bincode",
]

vonuvoli_features_all = [
	
	# "vonuvoli_release",
	# "vonuvoli_debug_for_binaries",
	# "vonuvoli_debug_for_tests",
	# "vonuvoli_debug_level_0",
	# "vonuvoli_debug_level_1",
	# "vonuvoli_debug_level_2",
	# "vonuvoli_debug_level_3",
	# "vonuvoli_debug_level_4",
	
	# "vonuvoli_defaults",
	# "vonuvoli_values_all",
	# "vonuvoli_builtins_all",
	
	"vonuvoli_values_string",
	"vonuvoli_values_bytes",
	"vonuvoli_values_array",
	"vonuvoli_values_values",
	"vonuvoli_values_error",
	"vonuvoli_values_keyword",
	"vonuvoli_values_unique",
	"vonuvoli_values_contexts",
	"vonuvoli_values_opaque",
	"vonuvoli_values_lambda",
	"vonuvoli_values_extended",
	"vonuvoli_values_native",
	"vonuvoli_values_mutable",
	
	"vonuvoli_builtins_parameters",
	"vonuvoli_builtins_promises",
	"vonuvoli_builtins_records",
	"vonuvoli_builtins_regex",
	"vonuvoli_builtins_ports",
	"vonuvoli_builtins_filesystem",
	"vonuvoli_builtins_processes",
	"vonuvoli_builtins_transcript",
	"vonuvoli_builtins_crypto",
	"vonuvoli_builtins_random",
	"vonuvoli_builtins_encoding",
	"vonuvoli_builtins_cache",
	"vonuvoli_builtins_serde",
	
	"vonuvoli_parser",
	"vonuvoli_tests",
	
	"vonuvoli_transcript",
	"vonuvoli_transcript_compact",
	"vonuvoli_transcript_ansi_enabled",
	"vonuvoli_transcript_ansi_always",
	"vonuvoli_transcript_code_hashes",
	"vonuvoli_terminal",
	
	"vonuvoli_backtrace",
	"vonuvoli_backtrace_sources",
	
	"vonuvoli_new_immutable",
	"vonuvoli_port_output_write_flush",
	"vonuvoli_port_output_display_flush",
	"vonuvoli_port_output_newline_flush",
	
	"vonuvoli_compiler_trace_error",
	"vonuvoli_optimizer_trace_error",
	"vonuvoli_evaluator_trace_error",
	
	"vonuvoli_panic_on_failed",
	"vonuvoli_abort_on_panic",
	
	"vonuvoli_inline",
	
]




[dependencies.regex]
# https://github.com/rust-lang/regex
version = "~0.2.10"
optional = true
features = ["unstable"]
default-features = false

[dependencies.backtrace]
# https://github.com/alexcrichton/backtrace-rs
version = "~0.3.5"
optional = true
features = ["libbacktrace", "libunwind", "dladdr"]
default-features = false

[dependencies.rustc-demangle]
# https://github.com/alexcrichton/rustc-demangle
version = "~0.1.6"
optional = true
features = []
default-features = false

[dependencies.ansi_term]
# https://github.com/ogham/rust-ansi-term
version = "~0.10.2"
optional = true
features = []
default-features = false

[dependencies.atty]
# https://github.com/softprops/atty
version = "~0.2.6"
optional = true
features = []
default-features = false

[dependencies.data-encoding]
# https://github.com/ia0/data-encoding
version = "~2.1.1"
optional = true
features = []
default-features = false

[dependencies.ring]
# https://github.com/briansmith/ring
version = "~0.12.1"
optional = true
features = ["dev_urandom_fallback"]
default-features = false

[dependencies.digest]
# https://github.com/RustCrypto/traits
version = "~0.7.2"
optional = true
features = ["std"]
default-features = false

[dependencies.sha-1]
# https://github.com/RustCrypto/hashes
version = "~0.7.0"
optional = true
features = ["asm"]
default-features = false

[dependencies.sha2]
# https://github.com/RustCrypto/hashes
version = "~0.7.0"
optional = true
# FIXME:  Broken!
# features = ["asm"]
features = []
default-features = false

[dependencies.sha3]
# https://github.com/RustCrypto/hashes
version = "~0.7.2"
optional = true
features = []
default-features = false

[dependencies.md-5]
# https://github.com/RustCrypto/hashes
version = "~0.7.0"
optional = true
features = ["asm"]
default-features = false

[dependencies.blake2]
# https://github.com/RustCrypto/hashes
version = "~0.7.0"
optional = true
# FIXME:  Broken!
# features = ["simd_asm"]
features = []
default-features = false

[dependencies.rand]
# https://github.com/rust-lang-nursery/rand
version = "~0.4.2"
optional = true
features = ["std"]
default-features = false

[dependencies.blake2-rfc]
# https://github.com/cesarb/blake2-rfc
version = "~0.2.18"
optional = true
features = ["simd_asm"]
default-features = false

[dependencies.lmdb-zero]
# https://github.com/AltSysrq/lmdb-zero
version = "~0.4.4"
optional = true
features = []
default-features = false

[dependencies.serde]
# https://github.com/serde-rs/serde
version = "~1.0.43"
optional = true
features = ["std"]
default-features = false

[dependencies.serde_derive]
# https://github.com/serde-rs/serde
version = "~1.0.43"
optional = true
features = []
default-features = false

[dependencies.serde_bytes]
# https://github.com/serde-rs/bytes
version = "~0.10.4"
optional = true
features = ["std"]
default-features = false

[dependencies.bincode]
# https://github.com/TyOverby/bincode
version = "~1.0.0"
optional = true
features = []
default-features = false




[profile.dev]
opt-level = 0
codegen-units = 32
lto = false
debug = true
incremental = true

[profile.test]
opt-level = 0
codegen-units = 32
lto = false
debug = true
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

[profile.bench]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

