
[package]

name = "vonuvoli-scheme"
version = "0.0.7"
publish = true

homepage = "https://github.com/volution/vonuvoli-scheme"
repository = "https://github.com/volution/vonuvoli-scheme"
documentation = "https://docs.rs/crate/vonuvoli-scheme"

description = "vonuvoli-scheme -- a Scheme interpreter focused on systems programming and scripting, almost R7RS compliant, featuring a large set of builtin functionality, while keeping performance and security in mind.  (Scheme is one of the major Lisp dialects, providing a powerful functional programming environment.)"
categories = [
	"command-line-utilities",
]
keywords = [
	"scheme",
	"r7rs",
	"interpreter",
	"scripting",
]

license = "LGPL-3.0+"
license-file = "documentation/licensing/notice.txt"
readme = "documentation/crate.md"

authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]

include = [
	"Cargo.toml",
	"Cargo.lock",
	"sources/*.rs",
	"sources/*.in",
	"documentation/crate.md",
	"documentation/readme.rst",
	"documentation/licensing/notice.txt",
	"documentation/licensing/lgpl-3.0.txt",
	"documentation/licensing/gpl-3.0.txt",
	"documentation/licensing/fdl-1.3.txt",
]




[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
repository = "volution/vonuvoli-scheme"
branch = "development"

[badges.is-it-maintained-issue-resolution]
repository = "volution/vonuvoli-scheme"

[badges.is-it-maintained-open-issues]
repository = "volution/vonuvoli-scheme"




[[bin]]
name = "vonuvoli-scheme"
path = "./sources/bin.rs"
test = false
bench = false
doc = false
doctest = false

[lib]
name = "vonuvoli_scheme"
path = "./sources/lib.rs"
test = false
bench = false
doc = true
doctest = false




[features]

default = [
	"vonuvoli_release",
]


vonuvoli_release = [
	"vonuvoli_defaults",
	"vonuvoli_values_all",
	"vonuvoli_builtins_all",
	"vonuvoli_tools_all",
	"vonuvoli_inline",
	"vonuvoli_terminal",
	"vonuvoli_transcript_ansi_enabled",
	"vonuvoli_transcript_code_hashes",
	"vonuvoli_abort_on_panic",
	"vonuvoli_lints_all",
]

vonuvoli_debug_for_binaries = [
	"vonuvoli_debug_level_6",
	"vonuvoli_trace_enabled_all",
	"vonuvoli_trace_error_all",
	"vonuvoli_abort_on_panic",
	"vonuvoli_lints_warnings",
]

vonuvoli_debug_for_tests = [
	"vonuvoli_debug_level_6",
	"vonuvoli_trace_enabled_all",
	"vonuvoli_trace_error_all",
	"vonuvoli_transcript_compact",
	"vonuvoli_transcript_ansi_always",
	"vonuvoli_lints_warnings",
]

vonuvoli_defaults = [
	"vonuvoli_compiler",
	"vonuvoli_optimizer",
	"vonuvoli_evaluator",
	"vonuvoli_new_immutable",
	"vonuvoli_port_output_display_flush",
	"vonuvoli_port_output_newline_flush",
	"vonuvoli_backtrace",
	"vonuvoli_transcript",
	"vonuvoli_parser",
	"vonuvoli_tests",
	"vonuvoli_hash",
	"vonuvoli_eqord",
	"vonuvoli_fmt_display",
	"vonuvoli_fmt_debug",
]


vonuvoli_debug_level_0 = []

vonuvoli_debug_level_1 = [
	"vonuvoli_debug_level_0",
	"vonuvoli_compiler",
	"vonuvoli_optimizer",
	"vonuvoli_evaluator",
	"vonuvoli_parser",
	"vonuvoli_tests",
]

vonuvoli_debug_level_2 = [
	"vonuvoli_debug_level_1",
	"vonuvoli_defaults",
]

vonuvoli_debug_level_3 = [
	"vonuvoli_debug_level_2",
	"vonuvoli_values_all",
]

vonuvoli_debug_level_4 = [
	"vonuvoli_debug_level_3",
	"vonuvoli_builtins_all",
]

vonuvoli_debug_level_5 = [
	"vonuvoli_debug_level_4",
	"vonuvoli_tools_all",
]

vonuvoli_debug_level_6 = [
	"vonuvoli_debug_level_5",
	"vonuvoli_terminal",
	"vonuvoli_transcript_ansi_enabled",
	"vonuvoli_transcript_code_hashes",
	"vonuvoli_backtrace_sources",
	"vonuvoli_documentation",
]


vonuvoli_new_immutable = []

vonuvoli_port_output_write_flush = []
vonuvoli_port_output_display_flush = []
vonuvoli_port_output_newline_flush = []

vonuvoli_compiler = [
	"vonuvoli_expressions",
]
vonuvoli_optimizer = [
	"vonuvoli_expressions_optimizer",
]
vonuvoli_evaluator = [
	"vonuvoli_expressions",
]
vonuvoli_expressions = []
vonuvoli_expressions_optimizer = [
	"vonuvoli_expressions",
]

vonuvoli_trace_enabled_all = [
	"vonuvoli_compiler_trace_enabled",
	"vonuvoli_optimizer_trace_enabled",
	"vonuvoli_evaluator_trace_enabled",
	"vonuvoli_parser_trace_enabled",
]
vonuvoli_trace_error_all = [
	"vonuvoli_compiler_trace_error",
	"vonuvoli_optimizer_trace_error",
	"vonuvoli_evaluator_trace_error",
	"vonuvoli_parser_trace_error",
]
vonuvoli_compiler_trace_enabled = []
vonuvoli_compiler_trace_error = [
	"vonuvoli_compiler_trace_enabled",
]
vonuvoli_optimizer_trace_enabled = []
vonuvoli_optimizer_trace_error = [
	"vonuvoli_optimizer_trace_enabled",
]
vonuvoli_evaluator_trace_enabled = []
vonuvoli_evaluator_trace_error = [
	"vonuvoli_evaluator_trace_enabled",
]
vonuvoli_parser_trace_enabled = []
vonuvoli_parser_trace_error = [
	"vonuvoli_parser_trace_enabled",
]

vonuvoli_backtrace = [
	"backtrace",
	"rustc-demangle",
]
vonuvoli_backtrace_sources = []
vonuvoli_terminal = [
	"ansi_term",
	"atty",
]
vonuvoli_transcript_compact = []
vonuvoli_transcript_ansi_enabled = []
vonuvoli_transcript_ansi_always = []
vonuvoli_transcript_code_hashes = [
	"blake2-rfc",
]
vonuvoli_transcript = []
vonuvoli_parser = []
vonuvoli_tests = [
	"vonuvoli_compiler",
	"vonuvoli_optimizer",
	"vonuvoli_evaluator",
	"vonuvoli_parser",
	"vonuvoli_transcript",
	"vonuvoli_eqord",
]
vonuvoli_documentation = [
	"vonuvoli_parser",
	"vonuvoli_values_string",
]

vonuvoli_panic_on_failed = []
vonuvoli_abort_on_panic = []

vonuvoli_inline = []
vonuvoli_hash = []
vonuvoli_eqord = []
vonuvoli_fmt_display = []
vonuvoli_fmt_debug = []

vonuvoli_lints_all = [
	"vonuvoli_lints_warnings",
	"vonuvoli_lints_issue_tracking",
]
vonuvoli_lints_warnings = []
vonuvoli_lints_issue_tracking = []

vonuvoli_values_all = [
	"vonuvoli_values_string",
	"vonuvoli_values_bytes",
	"vonuvoli_values_array",
	"vonuvoli_values_values",
	"vonuvoli_values_error",
	"vonuvoli_values_keyword",
	"vonuvoli_values_unique",
	"vonuvoli_values_contexts",
	"vonuvoli_values_opaque",
	"vonuvoli_values_lambda",
	"vonuvoli_values_extended",
	"vonuvoli_values_native",
	"vonuvoli_values_mutable",
	#! FIXME:  Enable the following dependency!
	#! "vonuvoli_values_pair_drop_iterative",
]
vonuvoli_values_string = []
vonuvoli_values_bytes = []
vonuvoli_values_array = []
vonuvoli_values_values = []
vonuvoli_values_error = []
vonuvoli_values_keyword = []
vonuvoli_values_unique = []
vonuvoli_values_contexts = []
vonuvoli_values_opaque = []
vonuvoli_values_lambda = []
vonuvoli_values_extended = []
vonuvoli_values_native = []
vonuvoli_values_mutable = []
vonuvoli_values_pair_drop_iterative = []

vonuvoli_builtins_all = [
	"vonuvoli_builtins_comparisons",
	"vonuvoli_builtins_parameters",
	"vonuvoli_builtins_promises",
	"vonuvoli_builtins_records",
	"vonuvoli_builtins_regex",
	"vonuvoli_builtins_ports",
	"vonuvoli_builtins_ports_input_value",
	"vonuvoli_builtins_ports_output_value",
	"vonuvoli_builtins_ports_descriptors",
	"vonuvoli_builtins_ports_temporary",
	"vonuvoli_builtins_filesystem",
	"vonuvoli_builtins_filesystem_temporary",
	"vonuvoli_builtins_processes",
	"vonuvoli_builtins_transcript",
	"vonuvoli_builtins_crypto",
	"vonuvoli_builtins_random",
	"vonuvoli_builtins_encoding",
	"vonuvoli_builtins_cache",
	"vonuvoli_builtins_serde",
	"vonuvoli_builtins_hashes",
	"vonuvoli_builtins_hashes_siphash",
	"vonuvoli_builtins_hashes_seahash",
	"vonuvoli_builtins_hashes_blake2",
]

vonuvoli_builtins_comparisons = [
	"vonuvoli_eqord",
]
vonuvoli_builtins_parameters = []
vonuvoli_builtins_promises = []
vonuvoli_builtins_records = [
	"vonuvoli_values_extended",
]
vonuvoli_builtins_regex = [
	"regex",
]
vonuvoli_builtins_ports = []
vonuvoli_builtins_ports_input_value = []
vonuvoli_builtins_ports_output_value = [
	"vonuvoli_fmt_display",
]
vonuvoli_builtins_ports_descriptors = []
vonuvoli_builtins_ports_temporary = [
	"vonuvoli_values_values",
	"vonuvoli_values_opaque",
	"tempfile",
]
vonuvoli_builtins_filesystem = [
	"vonuvoli_values_opaque",
]
vonuvoli_builtins_filesystem_temporary = [
	"vonuvoli_values_values",
	"vonuvoli_values_opaque",
	"tempfile",
]
vonuvoli_builtins_processes = [
	"vonuvoli_builtins_ports",
]
vonuvoli_builtins_transcript = [
	"vonuvoli_values_string",
	"vonuvoli_transcript",
]
vonuvoli_builtins_crypto = [
	"vonuvoli_values_native",
	"vonuvoli_values_bytes",
	"ring",
	"digest",
	"sha-1",
	"sha2",
	"sha3",
	"md-5",
	"blake2",
]
vonuvoli_builtins_random = [
	"vonuvoli_values_native",
	"rand",
]
vonuvoli_builtins_encoding = [
	"vonuvoli_values_native",
	"vonuvoli_values_string",
	"vonuvoli_values_bytes",
	"data-encoding",
]
vonuvoli_builtins_cache = [
	"vonuvoli_values_opaque",
	"vonuvoli_hash",
	"lmdb-zero",
	"blake2-rfc",
]
vonuvoli_builtins_serde = [
	"serde",
	"serde_derive",
	"serde_bytes",
	"bincode",
]
vonuvoli_builtins_hashes = [
	"vonuvoli_hash",
	"lazy_static",
]
vonuvoli_builtins_hashes_siphash = [
	"vonuvoli_builtins_hashes",
	"siphasher",
	"lazy_static",
	"rand",
]
vonuvoli_builtins_hashes_seahash = [
	"vonuvoli_builtins_hashes",
	"seahash",
	"lazy_static",
	"rand",
]
vonuvoli_builtins_hashes_blake2 = [
	"vonuvoli_builtins_hashes",
	"vonuvoli_values_bytes",
	"blake2-rfc",
	"lazy_static",
	"rand",
]

vonuvoli_tools_common = [
	"vonuvoli_transcript",
]
vonuvoli_tools_all = [
	"vonuvoli_tools_interpreter",
	"vonuvoli_tools_compiler",
	"vonuvoli_tools_tester",
	"vonuvoli_tools_bencher",
	"vonuvoli_tools_reports",
	"vonuvoli_tools_documentation",
]
vonuvoli_tools_interpreter = [
	"vonuvoli_tools_common",
	"vonuvoli_evaluator",
	"vonuvoli_compiler",
	"vonuvoli_optimizer",
	"vonuvoli_parser",
]
vonuvoli_tools_compiler = [
	"vonuvoli_tools_common",
	"vonuvoli_optimizer",
	"vonuvoli_parser",
]
vonuvoli_tools_tester = [
	"vonuvoli_tools_common",
	"vonuvoli_tests",
]
vonuvoli_tools_bencher = [
	"vonuvoli_tools_common",
	"vonuvoli_tests",
]
vonuvoli_tools_reports = [
	"vonuvoli_tools_common",
	"vonuvoli_eqord",
	"vonuvoli_hash",
]
vonuvoli_tools_documentation = [
	"vonuvoli_tools_common",
	"vonuvoli_documentation",
]

vonuvoli_features_all = [
	"vonuvoli_features_all_macros",
	"vonuvoli_features_all_individual",
	"vonuvoli_features_all_configurations",
]

vonuvoli_features_all_macros = [
	
	"vonuvoli_release",
	"vonuvoli_debug_for_binaries",
	"vonuvoli_debug_for_tests",
	"vonuvoli_debug_level_0",
	"vonuvoli_debug_level_1",
	"vonuvoli_debug_level_2",
	"vonuvoli_debug_level_3",
	"vonuvoli_debug_level_4",
	"vonuvoli_debug_level_5",
	"vonuvoli_debug_level_6",
	
	"vonuvoli_defaults",
	"vonuvoli_values_all",
	"vonuvoli_builtins_all",
	"vonuvoli_tools_all",
	"vonuvoli_trace_enabled_all",
	"vonuvoli_trace_error_all",
	"vonuvoli_lints_all",
	
]

vonuvoli_features_all_individual = [
	
	"vonuvoli_values_string",
	"vonuvoli_values_bytes",
	"vonuvoli_values_array",
	"vonuvoli_values_values",
	"vonuvoli_values_error",
	"vonuvoli_values_keyword",
	"vonuvoli_values_unique",
	"vonuvoli_values_contexts",
	"vonuvoli_values_opaque",
	"vonuvoli_values_lambda",
	"vonuvoli_values_extended",
	"vonuvoli_values_native",
	"vonuvoli_values_mutable",
	"vonuvoli_values_pair_drop_iterative",
	
	"vonuvoli_builtins_comparisons",
	"vonuvoli_builtins_parameters",
	"vonuvoli_builtins_promises",
	"vonuvoli_builtins_records",
	"vonuvoli_builtins_regex",
	"vonuvoli_builtins_ports",
	"vonuvoli_builtins_ports_input_value",
	"vonuvoli_builtins_ports_output_value",
	"vonuvoli_builtins_ports_descriptors",
	"vonuvoli_builtins_ports_temporary",
	"vonuvoli_builtins_filesystem",
	"vonuvoli_builtins_filesystem_temporary",
	"vonuvoli_builtins_processes",
	"vonuvoli_builtins_transcript",
	"vonuvoli_builtins_crypto",
	"vonuvoli_builtins_random",
	"vonuvoli_builtins_encoding",
	"vonuvoli_builtins_cache",
	"vonuvoli_builtins_serde",
	"vonuvoli_builtins_hashes",
	"vonuvoli_builtins_hashes_siphash",
	"vonuvoli_builtins_hashes_seahash",
	"vonuvoli_builtins_hashes_blake2",
	
	"vonuvoli_tools_common",
	"vonuvoli_tools_interpreter",
	"vonuvoli_tools_compiler",
	"vonuvoli_tools_tester",
	"vonuvoli_tools_bencher",
	"vonuvoli_tools_reports",
	"vonuvoli_tools_documentation",
	
	"vonuvoli_parser",
	"vonuvoli_tests",
	
	"vonuvoli_transcript",
	"vonuvoli_transcript_ansi_enabled",
	"vonuvoli_transcript_code_hashes",
	"vonuvoli_terminal",
	
	"vonuvoli_backtrace",
	"vonuvoli_backtrace_sources",
	
	"vonuvoli_compiler",
	"vonuvoli_optimizer",
	"vonuvoli_evaluator",
	"vonuvoli_expressions",
	"vonuvoli_expressions_optimizer",
	
	"vonuvoli_compiler_trace_enabled",
	"vonuvoli_optimizer_trace_enabled",
	"vonuvoli_evaluator_trace_enabled",
	"vonuvoli_parser_trace_enabled",
	
	"vonuvoli_hash",
	"vonuvoli_eqord",
	"vonuvoli_fmt_display",
	"vonuvoli_fmt_debug",
	
	"vonuvoli_documentation",
	
]

vonuvoli_features_all_configurations = [
	
	"vonuvoli_new_immutable",
	
	"vonuvoli_port_output_write_flush",
	"vonuvoli_port_output_display_flush",
	"vonuvoli_port_output_newline_flush",
	
	"vonuvoli_transcript_compact",
	"vonuvoli_transcript_ansi_always",
	
	"vonuvoli_compiler_trace_error",
	"vonuvoli_optimizer_trace_error",
	"vonuvoli_evaluator_trace_error",
	"vonuvoli_parser_trace_error",
	
	"vonuvoli_panic_on_failed",
	"vonuvoli_abort_on_panic",
	
	"vonuvoli_inline",
	
	"vonuvoli_lints_warnings",
	"vonuvoli_lints_issue_tracking",
	
]




[dependencies.regex]
# https://github.com/rust-lang/regex
version = "~1.0.0"
optional = true
features = ["use_std"]
default-features = false

[dependencies.backtrace]
# https://github.com/alexcrichton/backtrace-rs
version = "~0.3.8"
optional = true
features = ["libbacktrace", "libunwind", "dladdr"]
default-features = false

[dependencies.rustc-demangle]
# https://github.com/alexcrichton/rustc-demangle
version = "~0.1.8"
optional = true
features = []
default-features = false

[dependencies.ansi_term]
# https://github.com/ogham/rust-ansi-term
version = "~0.11.0"
optional = true
features = []
default-features = false

[dependencies.atty]
# https://github.com/softprops/atty
version = "~0.2.10"
optional = true
features = []
default-features = false

[dependencies.data-encoding]
# https://github.com/ia0/data-encoding
version = "~2.1.1"
optional = true
features = []
default-features = false

[dependencies.ring]
# https://github.com/briansmith/ring
version = "~0.12.1"
optional = true
features = ["dev_urandom_fallback"]
default-features = false

[dependencies.digest]
# https://github.com/RustCrypto/traits
version = "~0.7.2"
optional = true
features = ["std"]
default-features = false

[dependencies.sha-1]
# https://github.com/RustCrypto/hashes
version = "~0.7.0"
optional = true
features = ["asm"]
default-features = false

[dependencies.sha2]
# https://github.com/RustCrypto/hashes
version = "~0.7.1"
optional = true
features = ["asm"]
default-features = false

[dependencies.sha3]
# https://github.com/RustCrypto/hashes
version = "~0.7.3"
optional = true
features = []
default-features = false

[dependencies.md-5]
# https://github.com/RustCrypto/hashes
version = "~0.7.0"
optional = true
features = ["asm"]
default-features = false

[dependencies.blake2]
# https://github.com/RustCrypto/hashes
version = "~0.7.1"
optional = true
features = ["simd_asm"]
default-features = false

[dependencies.rand]
# https://github.com/rust-lang-nursery/rand
version = "~0.5.1"
optional = true
features = ["std"]
default-features = false

[dependencies.blake2-rfc]
# https://github.com/cesarb/blake2-rfc
version = "~0.2.18"
optional = true
features = ["simd_asm", "std"]
default-features = false

[dependencies.lmdb-zero]
# https://github.com/AltSysrq/lmdb-zero
version = "~0.4.4"
optional = true
features = []
default-features = false

[dependencies.serde]
# https://github.com/serde-rs/serde
version = "~1.0.66"
optional = true
features = ["std"]
default-features = false

[dependencies.serde_derive]
# https://github.com/serde-rs/serde
version = "~1.0.66"
optional = true
features = []
default-features = false

[dependencies.serde_bytes]
# https://github.com/serde-rs/bytes
version = "~0.10.4"
optional = true
features = ["std"]
default-features = false

[dependencies.bincode]
# https://github.com/TyOverby/bincode
version = "~1.0.0"
optional = true
features = []
default-features = false

[dependencies.siphasher]
# https://github.com/jedisct1/rust-siphash
version = "~0.2.2"
optional = true
features = []
default-features = false

[dependencies.seahash]
# https://github.com/redox-os/tfs
version = "~3.0.5"
optional = true
features = []
default-features = false

[dependencies.lazy_static]
# https://github.com/rust-lang-nursery/lazy-static.rs
version = "~1.0.1"
optional = true
features = ["nightly"]
default-features = false

[dependencies.tempfile]
# https://github.com/Stebalien/tempfile
version = "~3.0.2"
optional = true
features = []
default-features = false




[profile.dev]
opt-level = 0
codegen-units = 32
lto = false
debug = true
incremental = true

[profile.test]
opt-level = 0
codegen-units = 32
lto = false
debug = true
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

[profile.bench]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false

